2003-10-17 Joan McGalliard  <gallery@joanhenge.plus.com> 1.4.1-cvs-b166

	* User name and IP added to change emails.

2003-10-17  Beckett Madden-Woods  <beckett@beckettmw.com> 1.4.1-cvs-b165

	* Removed several warnings, notices, typos.

2003-10-16  Bharat Mediratta  <bharat@menalto.com> 1.4.1-cvs-b164

	* Fixed a typo in delete_photo.php

2003-10-16 Joan McGalliard  <gallery@joanhenge.plus.com> 1.4.1-cvs-b163

	* Added option where logged in visitors can subscribe to get all 
	  comments and/or other changes to album (or image) sent as email.

	* Added emailSubjPrefix.

	* Edited descriptions of intermediate image sizes in Config. Wizard.

	* Some more magic_quotes tidy-ups.

	* Validation buttons appear if devMode is "yes".

	* Validation buttons added to more pages.

	* Comments added using $id rather than $index.

	* Added slideshow_loop to nested albums.

2003-10-16 Jens Tkotz <jens@peino.de> 1.4.1-cvs-b162

	* Change: Adjust all check Pages

	* Language: - Synced against Changes
		    - Update German (de_DE), Vietnamese (vi_VN)

2003-10-16  Bharat Mediratta  <bharat@menalto.com> 1.4.1-cvs-b161

	* Fixed a minor issue in the config wizard where we weren't properly
	  displaying a warning string when gettext is not enabled.

2003-10-15  Beckett Madden-Woods  <beckett@beckettmw.com> 1.4.1-cvs-b160

	* Fixed massive brokenness in the ":" to "_" migration in UIDs. None of
	  the permissions UIDs had been updated, and the change neglected to
	  account for Windows platforms, where the ":" was in fact a ";"
	  semicolon.

2003-10-16 Jens Tkotz <jens@peino.de> 1.4.1-cvs-b159

	* Language: Update Spanish (es_ES), German (de_DE)

	* Change: Adjust Layout of check_netpbm.php.

2003-10-15  Bharat Mediratta  <bharat@menalto.com> 1.4.1-cvs-b158

	* Fixed a warning in setup/functions.inc form_password() code

	* Bumped config version to resolve warnings about missing
	  $gallery->app->gallery_slideshow setting.

2003-10-14 Jens Tkotz <jens@peino.de> 1.4.1-cvs-b157
