@@ -1,3 +1,7 @@
+2003-10-17  Beckett Madden-Woods  <beckett@beckettmw.com> 1.4.1-cvs-b167
+
+	* Fixed some errors in move_album.php and move_photo.php.
+
 2003-10-17 Joan McGalliard  <gallery@joanhenge.plus.com> 1.4.1-cvs-b166
 
 	* User name and IP added to change emails.
